// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Entrypoint Operation 0 injects the link to all symbols in dev mode 1`] = `
{
  "html": "<html lang="en"><head><title>test</title></head></html>",
  "tags": [
    {
      "attrs": {
        "href": "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&",
        "rel": "stylesheet",
      },
      "injectTo": "head",
      "tag": "link",
    },
  ],
}
`;

exports[`Entrypoint Operation 0 injects the link with found icon names into html 1`] = `
{
  "html": "<html lang="en"><head><title>test</title></head></html>",
  "tags": [
    {
      "attrs": {
        "href": "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_right,comment,home",
        "rel": "stylesheet",
      },
      "injectTo": "head",
      "tag": "link",
    },
  ],
}
`;

exports[`Entrypoint Operation 1 injects the link to all symbols in dev mode 1`] = `
{
  "html": "<html lang="en"><head><title>test</title></head></html>",
  "tags": [
    {
      "attrs": {
        "href": "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&",
        "rel": "stylesheet",
      },
      "injectTo": "head",
      "tag": "link",
    },
    {
      "attrs": {
        "as": "style",
        "href": "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&",
        "rel": "preload",
      },
      "injectTo": "head-prepend",
      "tag": "link",
    },
    {
      "attrs": {
        "href": "https://fonts.gstatic.com",
        "rel": "preconnect",
      },
      "injectTo": "head-prepend",
      "tag": "link",
    },
  ],
}
`;

exports[`Entrypoint Operation 1 injects the link with found icon names into html 1`] = `
{
  "html": "<html lang="en"><head><title>test</title></head></html>",
  "tags": [
    {
      "attrs": {
        "href": "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_right,comment,home",
        "rel": "stylesheet",
      },
      "injectTo": "head",
      "tag": "link",
    },
    {
      "attrs": {
        "as": "style",
        "href": "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_right,comment,home",
        "rel": "preload",
      },
      "injectTo": "head-prepend",
      "tag": "link",
    },
    {
      "attrs": {
        "href": "https://fonts.gstatic.com",
        "rel": "preconnect",
      },
      "injectTo": "head-prepend",
      "tag": "link",
    },
  ],
}
`;
